[gd_scene load_steps=3 format=3 uid="uid://cqx5ghissvd6t"]

[ext_resource type="Script" uid="uid://b1x0jjhouap40" path="res://performance_review.gd" id="1_o2xtu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdk4w"]
bg_color = Color(0, 0, 0, 1)

[node name="PerformanceReview" type="CanvasLayer"]
script = ExtResource("1_o2xtu")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tdk4w")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Performance Review"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SuccessCountLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Succeeded:"
fit_content = true

[node name="FailedCountLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Failed:"
fit_content = true

[node name="NudgedCountLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Nudged:"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="AcceptButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
